--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eurovision-scorer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://vages.github.io/eurovision-scorer",
   "dependencies": {
     "@types/jest": "24.0.12",
     "@types/node": "12.0.0",
@@ -17,7 +18,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.17.0"
   }
