--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/testing-library__cypress": "^5.0.8",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.17.0"
