--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/helper-builder-react-jsx": "^7.12.13",
+    "@babel/helper-define-map": "^7.13.12",
+    "@babel/helper-regex": "^7.10.5",
     "@types/testing-library__cypress": "^5.0.8",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
