--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eurovision-scorer",
   "version": "2.1.1",
   "private": true,
-  "homepage": "http://vages.github.io/eurovision-scorer",
+  "homepage": "http://gunnarvelle.github.io/eurovision-scorer",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
